

July 7 2013:

Code_CallbackPlayerSay*: Added 2nd argument (to entity)

August 11 2013
Code_CallbackPlayerSay*: 2nd argument = boolean teamchat -> false: toall true: onlyteam


Hmm I was too lazy to write anything...

February 3 2014:

CodeCallback_PlayerSayCmd is removed.
CodeCallback_PlayerSayAll is renamed to CodeCallback_PlayerSay.
CodeCallback_ScriptCommand added as well as script function: addscriptcommand()

Fixed an issue with Promod Live! which was reporting our xiceops_xx.iwd as Server Violation.
Fixed an issue that cheatprotected cvars got no reset on level startup which caused strange effects on Deathrun mod with bg_falldamage cvars.

June 22 2014:
Removed chat trap for script when a command gets invoked.
Use CodeCallback_ScriptCommand and addscriptcommand() instead  (see scriptcommand_example.txt)

Added securemode which should prevent breaking out of cod4 server into shell.


June 29 2014:
Removed the non working recusion callback function for player's chat. Use plugins instead.

July 27 2014:
exec() script function now returns the result as string truncated - Maybe this functionality getting removed later again if issues arise