@@ -266,6 +266,7 @@ void Scr_AddStockFunctions(){
 	Scr_AddFunction("strrepl", GScr_StrRepl, 0);
 	Scr_AddFunction("strtokbylen", GScr_StrTokByLen, 0);
 	Scr_AddFunction("exec", GScr_CbufAddText, 0);
+	Scr_AddFunction("execex", GScr_CbufAddTextEx, 0);
 	Scr_AddFunction("sha256", GScr_SHA256, 0);
 	Scr_AddFunction("addscriptcommand", GScr_AddScriptCommand, 0);
 
